# linker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prd.yml  docker-compose.yml  pyproject.toml
backend/: docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
backend/linker/: celery.py  data.py  permissions.py  settings.py  urls.py
backend/linker/config/: admin.py  models.py
backend/linker/config/migrations/: 0001_initial.py  0002_switch_description.py  0003_alter_switch_name.py
backend/linker/map/: admin.py  models.py  serializers.py  views.py
backend/linker/map/migrations/: 0001_initial.py  0002_initial.py  0003_basis.py  0004_alter_tocht_order.py  0005_forbiddenarea.py  0006_mapnote_author.py  0007_weide_identifier_weide_name_alter_weide_tocht.py  0008_alter_weide_tocht.py  0009_tocht_is_alternative_alter_tocht_identifier_and_more.py  0010_forbiddenarea_route_allowed.py  0011_weide_slotweide.py
backend/linker/people/: admin.py  constants.py  models.py  permissions.py  serializers.py  utils.py  views.py
backend/linker/people/fixtures/: groups.json
backend/linker/people/migrations/: 0001_initial.py  0002_rename_is_leader_contactperson_is_favorite.py  0003_team_safe_weide.py  0004_alter_team_group_picture.py  0005_alter_team_options.py  0006_remove_team_eind_weide_1_remove_team_eind_weide_2_and_more.py  0007_teamnote_author.py  0008_team_safe_weide_updated_at_and_more.py  0009_team_safe_weide_name.py  0010_alter_team_options.py  0011_alter_team_options_remove_team_group_picture.py  0012_alter_team_options.py  0013_add_login_token.py  0014_remove_team_safe_weide_and_more.py  0015_teamsafetylog_people_team_team_id_01e669_idx.py  0016_team_tracker_token.py  0017_organizationmember_tracker_token.py
backend/linker/people/templates/admin/people/contactperson/: change_list.html
backend/linker/tracing/: admin.py  apps.py  constants.py  models.py  serializers.py  signals.py  stats.py  tasks.py  utils.py  views.py
backend/linker/tracing/migrations/: 0001_initial.py  0002_alter_checkpointlog_left.py  0003_notification_readnotification.py  0004_notification_team_alter_notification_tracker.py
backend/linker/trackers/: admin.py  constants.py  geodynamics.py  heatmap.py  models.py  permissions.py  serializers.py  simulation.py  tasks.py  utils.py  views.py
backend/linker/trackers/management/commands/: importsimulation.py
backend/linker/trackers/migrations/: 0001_initial.py  0002_alter_tracker_tracker_id_and_more.py  0003_trackerlog_team_is_safe_and_more.py  0004_rename_tracker_code_tracker_tracker_name.py  0005_alter_trackerlog_unique_together_and_more.py  0006_trackerlog_source_alter_trackerlog_tracker_type.py  0007_alter_tracker_options.py  0008_remove_tracker_last_log_position.py  0009_remove_trackerlog_team_is_safe.py  0010_tracker_tracker_barcode.py  0011_remove_duplicate_positions.py  0012_position_unique_timestamp_source_owner.py  0013_fix_position_unique_constraint_nulls.py
deployment/: nginx.conf
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  .prettierrc.json  eslint.config.js  index.html  manifest.json  package-lock.json  package.json  (+6 more)
(+111 files in other folders)
