[project]
name = "backend"
version = "0.1.0"
dependencies = [
    "Django>=5.0.1",
    "djangorestframework>=3.14.0",
    "psycopg>=3.1.18",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "django-environ>=0.11.2",
    "django-enumfields>=2.1.1",
    "openpyxl>=3.1.2",
    "geopy>=2.4.1",
    "Pillow>=10.2.0",
    "djangorestframework-gis>=1.0",
    "gunicorn>=21.2.0",
]

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ruff>=0.2.0",
    "watchdog>=3.0.0",
    "django-debug-toolbar>=4.3.0",
]

[tool.ruff]
extend-exclude = ["migrations"]
line-length = 120

[tool.ruff.format]
quote-style = "single"

